# Reversi-Android-APK

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AI.cpp  AI.h  CMakeLists.txt  GameEngine.cpp  GameEngine.h  native-lib.cpp
app/src/main/java/com/example/reversi/: Dialogs.kt  GameRenderer.kt  GameSurfaceView.kt  MainActivity.kt  ReversiLib.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  dialog_game_over.xml  dialog_game_setup.xml  dialog_rules.xml  dialog_settings.xml
app/src/main/res/mipmap-hdpi/: placeholder.xml
app/src/main/res/mipmap-mdpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-ja/: strings.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
